--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "bugs": {
     "url": "https://github.com/Tella1234/Pexels/issues"
   },
-  "homepage": "https://github.com/Tella1234/Pexels#readme",
+  "homepage": "https://github.com/Tella1234/Pexels/Pexels/",
   "dependencies": {
+    "postcss-cli": "^9.0.2"
+  },
+  "devDependencies": {
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
-    "postcss-cli": "^9.0.2",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.0"
   }
 }
